# mcp-tools-p

./: .gitignore  QUICK_SETUP.md  README.md  USER_GUIDE.md  init_requirement.md  main.py  mcp.json  pyproject.toml
docs/: configuration.md  deployment.md  direct_http_access.md
examples/: demo.py
src/gpu_monitor/: __init__.py  cli.py  core.py  gpumonitor  mcp_server.py  models.py  server.py  server_config.json  servers.json
src/gpu_monitor/bash_scripts/: README.md  gpu_status.sh  gpu_usage.sh
src/gpu_monitor/scripts/: README.md  gpu_kill.sh  gpu_status.sh  gpu_usage.sh  setup-ssh-keys.sh
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_models.py
